# ytpl-sync

./: .env.example  .gitignore  README.md  config.yaml  main.py  pyproject.toml  requirements.txt  ytpl-sync-usage-guide.md
docs/: project.md
tests/: conftest.py  test_config.py  test_db.py  test_downloader.py  test_encoder.py  test_lock.py  test_notifications.py  test_reconciler.py  test_utils.py
ytpl_sync/: config.py  downloader.py  encoder.py  lock.py  main.py  models.py  run_context.py
ytpl_sync.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
ytpl_sync/db/: manager.py  neon_backend.py  reconciler.py  sqlite_backend.py
ytpl_sync/notifications/: mailer.py  reporter.py  telegram.py
ytpl_sync/sources/: channel.py  playlist.py  resolver.py
ytpl_sync/storage/: __init__.py  gdrive_storage.py  local_storage.py  router.py
ytpl_sync/utils/: cleanup.py  disk.py  subprocess_runner.py  time_window.py  ytdlp_check.py
